--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <body>
 
         <h1>Caleb Imel</h1>
-        <p>N220 Projects</p>
+        <p>N220 Projec</p>
         <p>Fall 2020</p>
 
     </body>
