--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <body>
 
         <h1>Caleb Imel</h1>
-        <p>N220 Projec</p>
+        <p>N220 Projects</p>
         <p>Fall 2020</p>
+
+        <h2>Lab 2</h2>
+        <p><a href="">First Example</a></p>
+        
 
     </body>
 </html>
