--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <p>Fall 2020</p>
 
         <h2>Lab 2</h2>
-        <p><a href="">First Example</a></p>
-        
+        <p><a href="labs/lab1/index.html">First Example</a></p>
+
 
     </body>
 </html>
