--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    ToDO: INSERT LAB 1 HERE
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
