--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <p><a href="labs/lab1/index.html">First Example</a></p>
 
         <h2>Lab 2</h2>
+        <p><a href="labs/lab2/index.html">First Example Puck Side</a></p>
+        <p><a href="labs/lab2/index2.html">Second Example World Warp</a></p>
+        <p><a href="labs/lab2/index3.html">Third Example Ball Bounce</a></p>
 
         <h2>Lab 3</h2>
     </body>
