--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <p><a href="labs/lab2/index3.html">Third Example Ball Bounce</a></p>
 
         <h2>Lab 3</h2>
+        <p><a href="labs/lab3/index.html">First Example FizzBuzz</a></p>
+        <p><a href="labs/lab3/index2.html">Second Example Pyramid</a></p>
+        <p><a href="labs/lab3/index3.html">Third Example Circle inside of Circles</a></p>
+
+
     </body>
 </html>
