--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <p><a href="labs/lab3/index2.html">Second Example Pyramid</a></p>
         <p><a href="labs/lab3/index3.html">Third Example Circle inside of Circles</a></p>
 
+        <h2>Lab 4</h2>
+        <p><a href="labs/lab4/index.html">First Example Neapolitan</a></p>
+        <p><a href="labs/lab4/index2.html">Second Example Dripping water</a></p>
+        <p><a href="labs/lab4/index3.html">Third Example Snake</a></p>
+
 
     </body>
 </html>
