--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <p><a href="labs/lab4/index2.html">Second Example Dripping water</a></p>
         <p><a href="labs/lab4/index3.html">Third Example Snake</a></p>
 
+        <h2>Lab 5</h2>
+        <p><a href="labs/lab5/index.html">First Example Click for Random</a></p>
+        <p><a href="labs/lab5/index2.html">Second Example Bounce off rectangle</a></p>
+        <p><a href="labs/lab5/index3.html">Third Example Personal Composition</a></p>
+
 
     </body>
 </html>
