--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <h2>Lab 5</h2>
         <p><a href="labs/lab5/index.html">First Example Click for Random</a></p>
         <p><a href="labs/lab5/index2.html">Second Example Bounce off rectangle</a></p>
-        <p><a href="labs/lab5/index3.html">Third Example Personal Composition</a></p>
+        <p><a href="labs/lab5/index3.html">Third Example Personal Composition: Rainbow display</a></p>
+
+        <h2>Lab 6</h2>
+        <p><a href="labs/lab6/index.html">First Example Data-driven display</a></p>
+        <p><a href="labs/lab6/index2.html">Second Example Character Controller</a></p>
+        <p><a href="labs/lab6/index3.html">Third Example Personal Composition: Bullet Hell Attempt</a></p>
 
 
     </body>
