--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         <p><a href="labs/lab6/index2.html">Second Example Character Controller</a></p>
         <p><a href="labs/lab6/index3.html">Third Example Personal Composition: Bullet Hell Attempt</a></p>
 
+        <h2>Midterm Review</h2>
+        <p><a href="midterm_practice/index.html">Example Pongish</a></p>
+
+        <h2>Midterm</h2>
+        <p><a href="midterm/index.html">First Example </a></p>
+        <p><a href="midterm/index2.html">Second Example </a></p>
+        <p><a href="midterm/index3.html">Third Example </a></p>
+
 
     </body>
 </html>
