--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <p><a href="midterm_practice/index.html">Example Pongish</a></p>
 
         <h2>Midterm</h2>
-        <p><a href="midterm/index.html">First Example </a></p>
-        <p><a href="midterm/index2.html">Second Example </a></p>
-        <p><a href="midterm/index3.html">Third Example </a></p>
+        <p><a href="midterm/index.html">Midterm Code</a></p>
 
 
     </body>
