--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <h2>Midterm</h2>
         <p><a href="midterm/index.html">Midterm Code</a></p>
 
+        <h2>Lab 7</h2>
+        <p><a href="labs/lab7/index.html">First Example Greeter</a></p>
+        <p><a href="labs/lab7/index2.html">Second Example Password Protected</a></p>
+        <p><a href="labs/lab7/index3.html">Third Example Number guesser</a></p>
+
 
     </body>
 </html>
