--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <p><a href="labs/lab7/index2.html">Second Example Password Protected</a></p>
         <p><a href="labs/lab7/index3.html">Third Example Number guesser</a></p>
 
+        <h2>Lab 8</h2>
+        <p><a href="labs/lab8/index.html">First Example Peak Pixels</a></p>
+        <p><a href="labs/lab8/index2.html">Second Example Thats a lot of div</a></p>
+        <p><a href="labs/lab8/index3.html">Third Example Over and Out</a></p>
+
+
 
     </body>
 </html>
