--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         <p><a href="labs/lab8/index2.html">Second Example Thats a lot of div</a></p>
         <p><a href="labs/lab8/index3.html">Third Example Over and Out</a></p>
 
+        <h2>Lab 9</h2>
+        <p><a href="labs/lab9/index.html">First Example Its just average</a></p>
+        <p><a href="labs/lab9/index2.html">Second Example Bad word catcher</a></p>
+        <p><a href="labs/lab9/index3.html">Third Example Make Divs</a></p>
 
 
     </body>
