--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <p><a href="labs/lab9/index2.html">Second Example Bad word catcher</a></p>
         <p><a href="labs/lab9/index3.html">Third Example Make Divs</a></p>
 
+        <h2>Lab 10</h2>
+        <p><a href="labs/lab10/index.html">First Example</a></p>
+        <p><a href="labs/lab10/index2.html">Second Example </a></p>
+        <p><a href="labs/lab10/index3.html">Third Example</a></p>
 
     </body>
 </html>
