--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <p><a href="labs/lab9/index3.html">Third Example Make Divs</a></p>
 
         <h2>Lab 10</h2>
-        <p><a href="labs/lab10/index.html">First Example</a></p>
-        <p><a href="labs/lab10/index2.html">Second Example </a></p>
-        <p><a href="labs/lab10/index3.html">Third Example</a></p>
+        <p><a href="labs/lab10/index.html">First Example Color Changer</a></p>
+        <p><a href="labs/lab10/index2.html">Second Example Color Mixer</a></p>
+        <p><a href="labs/lab10/index3.html">Third Example Flash Cards</a></p>
 
     </body>
 </html>
