--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
         <p><a href="labs/lab10/index2.html">Second Example Color Mixer</a></p>
         <p><a href="labs/lab10/index3.html">Third Example Flash Cards</a></p>
 
+        <h2>FINAL PROJECT</h2>
+        <p><a href="FinalProject/index.html">Final Project</a></p>
+
     </body>
 </html>
